# PG-Defense

./: CITATION.cff  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
experiments/: _common.py  run_adaptive.py  run_cross_domain.py  run_dataset_stats.py  run_defense_baselines.py  run_dl_baselines.py  run_evasion.py  run_lightweight.py  run_main_detection.py  run_per_attack.py
extraction/: README.md  pgdef_extractor.py
figures/: make_all.py  make_baseline_collapse.py  make_crossdomain.py  make_importance.py  make_pareto.py  make_perattack.py  make_psi.py  make_roc_attack.py  plot_utils.py
pgdef/: __init__.py  attacks.py  data.py  features.py  io_utils.py  metrics.py  model.py  pipeline.py
pgdef/attacks/: adversarial.py
pgdef/data/: loaders.py
pgdef/eval/: metrics.py  resources.py  tables.py
pgdef/features/: feature_spec.py  flow_state.py  pcap_extractor.py  welford.py
pgdef/models/: adaptive.py  baselines.py  ensemble.py
scripts/: 01_extract_features.py  02_train_evaluate.py  03_adversarial_eval.py  04_cross_domain.py  05_ablation.py  06_resource_bench.py  07_adaptive_eval.py  reproduce_all.sh
