[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-def"
version = "1.0.0"
description = "PG-Def: Protocol-Grounded Lightweight Defense for adversarially robust NIDS (reproduction package)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "xgboost>=1.7",
    "imbalanced-learn>=0.10",
    "pyyaml>=6.0",
    "dpkt>=1.9.8",
    "mmh3>=3.0",
]

[project.optional-dependencies]
adversarial = [
    "torch>=2.0",
    "adversarial-robustness-toolbox>=1.17",
]

[tool.setuptools.packages.find]
include = ["pgdef*"]
